# ZJP-ChatServer

./: CMakeLists.txt  README.md  build.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupuser.hpp  user.hpp
include/server/db/: db.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemsgmodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: CMakeLists.txt  README.md  test.cpp
test/test_build/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  test
